<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/dimen_278dp"
    android:layout_height="wrap_content"
    android:layout_marginEnd="@dimen/dimen_8dp"
    android:paddingEnd="@dimen/dimen_10dp"
    android:backgroundTint="@color/background_colour">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shadow_view"
        android:paddingBottom="@dimen/dimen_12dp">

        <ImageView
            android:id="@+id/img_event"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="@dimen/dimen_156dp"
            android:layout_marginStart="@dimen/dimen_2dp"
            android:layout_marginEnd="@dimen/dimen_2dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/event_image_placeholder" />

        <TextView
            android:id="@+id/txt_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_10dp"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:fontFamily="@font/inter_regular"
            android:text="@string/dummy_date"
            android:maxLines="1"
            android:textColor="@color/dirty_white"
            android:textSize="@dimen/dimen_12sp"
            app:layout_constraintStart_toStartOf="@+id/img_event"
            app:layout_constraintTop_toBottomOf="@+id/img_event" />

        <TextView
            android:id="@+id/txt_event_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/dummy_description"
            android:textColor="@color/dirty_white"
            android:fontFamily="@font/inter_bold"
            android:textSize="@dimen/dimen_12sp"
            app:layout_constraintStart_toStartOf="@+id/txt_date"
            app:layout_constraintTop_toBottomOf="@+id/txt_date" />

        <TextView
            android:id="@+id/event_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_location"
            android:maxLines="1"
            android:textColor="@color/darker_grey"
            android:textSize="@dimen/dimen_12sp"
            android:fontFamily="@font/inter_regular"
            app:layout_constraintStart_toStartOf="@+id/txt_event_name"
            app:layout_constraintTop_toBottomOf="@+id/txt_event_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_40dp"
            android:layout_marginStart="@dimen/dimen_10dp"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:layout_marginEnd="@dimen/dimen_10dp"
            android:orientation="horizontal"
            android:background="@drawable/shadow_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_address">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/inter_regular"
                android:gravity="center"
                android:text="@string/info"
                android:textColor="@color/pally_green"
                android:textSize="@dimen/dimen_18sp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>