<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/dimen_168dp"
    android:layout_height="wrap_content"
    android:background="@color/background_colour"
    android:paddingEnd="@dimen/dimen_10dp"
    android:layout_marginEnd="@dimen/dimen_7dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_60dp"
        android:backgroundTint="@color/background_colour"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shadow_view"
            android:paddingBottom="@dimen/dimen_10dp">


            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_6dp"
                app:layout_constraintStart_toStartOf="@+id/txt_teacher_name"
                app:layout_constraintTop_toBottomOf="@+id/txt_teacher_name"
                app:srcCompat="@drawable/ic_rate" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_4dp"
                app:layout_constraintStart_toStartOf="@+id/txt_experience"
                app:layout_constraintTop_toBottomOf="@+id/txt_experience"
                app:srcCompat="@drawable/ic_distance" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_6dp"
                app:layout_constraintEnd_toStartOf="@+id/textView11"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginBottom="@dimen/dimen_10dp"
                app:layout_constraintTop_toBottomOf="@+id/milongas_view"
                app:srcCompat="@drawable/ic_date" />

            <View
                android:id="@+id/milongas_view"
                android:layout_width="@dimen/match_constraint"
                android:layout_height="@dimen/dimen_1dp"
                android:layout_marginTop="@dimen/dimen_2dp"
                android:layout_marginEnd="@dimen/dimen_10dp"
                android:background="@color/light_grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/imageView3"
                app:layout_constraintTop_toBottomOf="@+id/txt_teacher_distance" />

            <TextView
                android:id="@+id/txt_teacher_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_4dp"
                android:text="@string/_5_0"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_13sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="@+id/imageView2"
                app:layout_constraintVertical_bias="0.333" />

            <TextView
                android:id="@+id/txt_teacher_review_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_4dp"
                android:text="@string/_100"
                android:textColor="@color/grey"
                android:fontFamily="@font/inter_regular"
                app:layout_constraintBottom_toBottomOf="@+id/txt_teacher_rating"
                app:layout_constraintStart_toEndOf="@+id/txt_teacher_rating"
                app:layout_constraintTop_toTopOf="@+id/txt_teacher_rating" />

            <TextView
                android:id="@+id/txt_experience"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_2dp"
                android:textSize="@dimen/dimen_12sp"
                android:text="@string/_20_years_of_experience"
                android:textColor="@color/white"
                android:fontFamily="@font/inter_regular"
                app:layout_constraintStart_toStartOf="@+id/imageView2"
                app:layout_constraintTop_toBottomOf="@+id/txt_teacher_rating" />

            <TextView
                android:id="@+id/txt_teacher_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_8dp"
                android:text="@string/_15_km_away"
                android:textSize="@dimen/dimen_13sp"
                android:textColor="@color/grey"
                app:layout_constraintBottom_toBottomOf="@+id/imageView3"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toTopOf="@+id/imageView3" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_12dp"
                android:text="@string/book_a_lesson"
                android:textColor="@color/pally_green"
                android:fontFamily="@font/inter_regular"
                android:textSize="@dimen/dimen_14sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/imageView4"
                app:layout_constraintTop_toTopOf="@+id/imageView4" />

            <TextView
                android:id="@+id/txt_teacher_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_10dp"
                android:layout_marginTop="@dimen/dimen_58dp"
                android:text="Ines Muzzopappa"
                android:maxLines="1"
                android:fontFamily="@font/inter_bold"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


    <ImageView
        android:id="@+id/img_teacher"
        android:layout_width="@dimen/dimen_100dp"
        android:layout_height="@dimen/dimen_100dp"
        android:elevation="@dimen/dimen_10dp"
        android:src="@drawable/teacher_placeholder"
        app:layout_constraintBottom_toTopOf="@+id/cardView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardView4" />

</androidx.constraintlayout.widget.ConstraintLayout>